tests/test0140.exp
Trigger an erroraaaUncatched error has occurred.
Hi!
#3 error: (tests/test0140.ctr: 10)
#2 run (tests/test0140.ctr: 11)
#1 run (tests/test0140.ctr: 14)
