tests/test0140.ctr
#NOAST
#Test stack trace
Pen write: 'Trigger an error'.
#NonExistingObject doSomething.
#
#
#
{ Pen write: 'aaa'. 
	{
#	
		thisBlock error: 'Hi!'.
		} run.
#		
#	
} run.

#
#
